--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
             </div>
         </div>
     </div>
-
+   
+    <h5 class="gracias">Gracias por tu visita</h5>
+    <div class="footer_social">
+    <a href="https://www.linkedin.com/in/coderman/" target="_blank">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://wa.me/+541169658937/?text=Te gustó el diseño del sitio web??, Escribime" target="_blank">
+            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        </a>
+    </div>
     <script src="./js/app.js"></script>
     
 </body>
