--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/skeleton.css">
     <link rel="stylesheet" href="./css/app.css">
+    <script src="https://use.fontawesome.com/e3930d76f3.js"></script>
 </head>
 <body>
 
@@ -58,10 +59,14 @@
     <a href="https://www.linkedin.com/in/coderman/" target="_blank">
             <i class="fa fa-linkedin" aria-hidden="true"></i>
         </a>
+        <a href="https://github.com/javier-olivieri/" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>  
         <a href="https://wa.me/+541169658937/?text=Te gustó el diseño del sitio web??, Escribime" target="_blank">
             <i class="fa fa-whatsapp" aria-hidden="true"></i>
         </a>
     </div>
+    
     <script src="./js/app.js"></script>
     
 </body>
